[tool.poetry]
name = "fastapi-tutorial"
version = "0.1.0"
description = ""
authors = ["rymyung <rymyung@hanmail.net>"]
readme = "README.md"
packages = [{include = "fastapi_tutorial"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
ruff = "^0.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
