[tool.poetry]
name = "fastapi-tutorial"
version = "0.1.0"
description = ""
authors = ["rymyung <rymyung@hanmail.net>"]
readme = "README.md"
packages = [{include = "fastapi_tutorial"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
ruff = "^0.1.5"
py-ulid = "^1.0.3"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pydantic = "^2.9.2"
sqlalchemy = "^2.0.36"
mysqlclient = "^2.2.5"
alembic = "^1.14.0"
dependency-injector = "^4.43.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
